refactor code, complete swagger api specification demo
