# manager.py
@@ -10,27 +10,26 @@ from flask import jsonify, request
 from model.suppliers import Supplier
 
 
-def add_region(description):
-    region_description = description
+def add_region(region_description):
+    region_description = region_description
     region = Region(region_description)
     db.session.add(region)
     db.session.commit()
     return jsonify(
-        region_description=description
+        region_description=region_description
     )
 
 
-def add_territory(region_id):
-    region = Region.find_by_id(region_id)
-    if region is None:
+def add_territory(region_id, territory_description):
+    region_id = region_id
+    if Region.find_by_id(region_id) is None:
         return {'error': 'region id not found'}, 404
-    data = request.get_json()
-    territory_description = data["description"]
-    territory = Territory(territory_description)
-    region.territories.append(territory)
-
+    territory_description = territory_description
+    territory = Territory(region_id, territory_description)
+    db.session.add(territory)
     db.session.commit()
     return jsonify(
+        region_id=region_id,
         territory_description=territory_description
 
     )
@@ -66,7 +65,7 @@ def count_orders_by_countries():
     return result
 
 
-def get_customer_and_order_by_employee_id(employee_id):
+def get_orders_by_employee(employee_id):
     employee = Employee.find_by_id(employee_id)
     if employee is None:
         return {'error': 'id not found'}, 404
@@ -98,7 +97,7 @@ def count_customer_per_countries():
 
 
 def calculate_revenue_per_year(start_year, end_year):
-    query = db.session.query(db.func.sum(OrderDetail.quantity * (OrderDetail.unit_price - OrderDetail.discount * 100))) \
+    query = db.session.query(db.func.sum(OrderDetail.quantity * (OrderDetail.unit_price - OrderDetail.discount * 100)))\
         .join(Order).filter(Order.order_date.between(f'"{start_year}-01-01"', f'"{end_year}-01-01"')).one()
 
     return jsonify(
@@ -124,6 +123,14 @@ def calculate_revenue_per_category(category_id):
     return {'total revenue': format(query[0], '.2f')}
 
 
-def count_orders_by_country(country):
-    query = db.session.query(db.func.count(Order.ship_country)).filter(Order.ship_country == country).one()
-    return {'country': country, 'total order': query[0]}
+def get_orders_by_country(country):
+    query = db.session.query(Order.ship_city, Customer.contact_name, Customer.company_name).join(
+        Customer).filter(Order.ship_country == country).all()
+    result = []
+    for row in query:
+        data = dict()
+        data['city'] = row.ship_city
+        data['contact_name'] = row.contact_name
+        data['company'] = row.company_name
+        result.append(data)
+    return result
