# resources/employee_resource.py
@@ -2,12 +2,12 @@
 
 from model.employees import Employee
 from flask_restful import Resource
-from manager import get_customer_and_order_by_employee_id
+from manager import get_orders_by_employee
 
 
 class EmployeeInfo(Resource):
     """
-    returns the information of employees by their respective id
+    returns the information related to employee by their respective id
     """
 
     def get(self, id):
@@ -15,6 +15,6 @@ class EmployeeInfo(Resource):
         return emp.to_json(emp.employee_id)
 
 
-class CustomerAndOrderByEmployeeId(Resource):
+class OrdersByEmployee(Resource):
     def get(self, id):
-        return get_customer_and_order_by_employee_id(id)
+        return get_orders_by_employee(id)
