# resources/territory_resource.py
@@ -1,8 +1,9 @@
-
+from flask import request
 from flask_restful import Resource
 from manager import add_territory
 
 
 class AddTerritory(Resource):
-    def post(self, id):
-        return add_territory(id)
+    def post(self):
+        data = request.get_json()
+        return add_territory(data['region_id'], data['territory_description'])
