# run.py
@@ -3,9 +3,9 @@ from flask import Flask
 from flask_restful import Api
 
 
-from resources.employee_resource import EmployeeInfo, CustomerAndOrderByEmployeeId
-from resources.customer_resource import CustomerInfo, CustomerPerCountry
-from resources.order_resource import OrderInfo, OrderByCountry, OrderBySpecificCountry
+from resources.employee_resource import EmployeeInfo,  OrdersByEmployee
+from resources.customer_resource import CustomerInfo, CustomerCountPerCountry
+from resources.order_resource import OrderInfo, OrdersByCountry, OrdersCountByCountry
 from resources.product_resource import ProductInfo
 from resources.category_resource import CategoryInfo
 from resources.supplier_resource import SupplierInfo
@@ -31,7 +31,7 @@ api = Api(app)
 app.config['SQLALCHEMY_DATABASE_URI'] = 'postgresql://postgres:1234@localhost/northwind'
 app.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = False
 
-api.add_resource(EmployeeInfo, '/employees /<id>')
+api.add_resource(EmployeeInfo, '/employees/<id>')
 api.add_resource(CustomerInfo, '/customers/<id>')
 api.add_resource(ProductInfo, '/products/<id>')
 api.add_resource(OrderInfo, '/orders/<id>')
@@ -39,15 +39,15 @@ api.add_resource(CategoryInfo, '/categories/<id>')
 api.add_resource(SupplierInfo, '/suppliers/<id>')
 api.add_resource(ShipperInfo, '/shippers/<id>')
 api.add_resource(AddRegion, '/regions')
-api.add_resource(AddTerritory, '/territories/<id>')
-api.add_resource(OrderByCountry, '/orders_by_countries')
-api.add_resource(CustomerAndOrderByEmployeeId, '/orders_by_employee/<id>')
-api.add_resource(CustomerPerCountry, '/customers_per_country')
+api.add_resource(AddTerritory, '/territories')
+api.add_resource(OrdersCountByCountry, '/orders_count/countries')
+api.add_resource(OrdersByEmployee, '/employee/<id>/orders')
+api.add_resource(CustomerCountPerCountry, '/customers_count/country')
 api.add_resource(OrdersDetail, '/order_details/<id>')
 api.add_resource(RevenuePerYear, '/revenue_per_year')
-api.add_resource(RevenuePerSupplier, '/revenue_per_supplier/<id>')
-api.add_resource(RevenuePerCategory, '/revenue_per_category/<id>')
-api.add_resource(OrderBySpecificCountry, '/orders_by_country')
+api.add_resource(RevenuePerSupplier, '/supplier/<id>/revenue')
+api.add_resource(RevenuePerCategory, '/category/<id>/revenue')
+api.add_resource(OrdersByCountry, '/orders/country')
 
 if __name__ == '__main__':
     db.init_app(app)
