# static/swagger.json
@@ -6,7 +6,7 @@
     "title": "Northwind",
     "termsOfService": "http://swagger.io/terms/",
     "contact": {
-      "email": "testing@abc.com"
+      "email": "contact@me.com"
     },
     "license": {
       "name": "Apache 2.0",
@@ -16,16 +16,17 @@
   "host": "127.0.0.1:5000",
   "basePath": "/",
   "schemes": [
-    "http"
+    "http",
+    "https"
   ],
+
   "paths": {
     "/categories/{category_id}": {
       "get": {
         "tags": [
-          "Category"
+          "category"
         ],
-        "summary": "return category information",
-        "description": " ",
+        "summary": "get information of a category",
         "operationId": "getCategoryById",
         "consumes": [
           "application/json"
@@ -37,7 +38,7 @@
           {
             "in": "path",
             "name": "category_id",
-            "description": "category Id",
+            "description": "id of a category to find ",
             "type": "integer",
             "required": true,
             "default": "1"
@@ -47,7 +48,10 @@
           "200": {
             "description": "it's ok",
             "schema": {
+              "type": "array",
+              "items": {
               "$ref": "#/definitions/Category"
+                }
             }
           },
           "404": {
@@ -59,10 +63,9 @@
     "/employees/{employee_id}": {
       "get": {
         "tags": [
-          "Employee"
+          "employee"
         ],
-        "summary": "return employee information",
-        "description": "",
+        "summary": "get information of an employee with the given Id",
         "operationId": "getEmployeeById",
         "consumes": [
           "application/json"
@@ -74,29 +77,34 @@
           {
             "name": "employee_id",
             "in": "path",
-            "description": "employee Id",
+            "description": "id of an employee to match",
             "type": "integer",
             "required": true,
-            "default": "1"
+            "default": 1
           }
         ],
         "responses": {
           "200": {
             "description": "it's ok",
             "schema": {
-              "$ref": "#/definitions/EmployeeInfo"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Employee"
+              }
             }
+          },
+          "404": {
+            "description": "employee_id not found"
           }
         }
       }
     },
-    "/orders_by_employee/{employee_id}": {
+    "/employee/{employee_id}/orders": {
       "get": {
         "tags": [
-          "Orders_byEmployee"
+          "ordersByEmployee"
         ],
-        "summary": "return employee, order, and customer information",
-        "description": "gives all the order taken and the customer detail from the specific employee",
+        "summary": "get list of orders taken by an employee ",
         "operationId": "getOrdersByEmployee",
         "consumes": [
           "application/json"
@@ -108,17 +116,209 @@
           {
             "name": "employee_id",
             "in": "path",
-            "description": "employee Id",
+            "description": "id of an employee to be given",
             "type": "integer",
-            "required": true
+            "required": true,
+            "default": 1
           }
         ],
         "responses": {
           "200": {
             "description": "it's ok",
             "schema": {
-              "$ref": "#/definitions/OrdersByEmployee"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/OrdersByEmployee"
+              }
             }
+          },
+          "404": {
+            "description": "employee not exist with such id"
+          }
+        }
+      }
+    },
+    "/orders/country": {
+      "get": {
+        "tags": [
+          "ordersByCountry"
+        ],
+        "summary": "get list of orders which is ordered within given country ",
+        "operationId": "getOrdersByCountry",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "description": "name of the country that to match",
+            "required": true,
+            "default": "France",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "it's ok",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/OrdersByCountry"
+              }
+            }
+          },
+          "404": {
+            "description": "country not found"
+          }
+        }
+      }
+    },
+    "/revenue_per_year": {
+      "get": {
+        "tags": [
+          "revenueByYear"
+        ],
+        "summary": "get revenue between two different years",
+        "operationId": "getRevenue",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "start",
+            "in": "query",
+            "description": " year, from when we want to calculate revenue ",
+            "required": true,
+            "default": "1998",
+            "type": "string"
+          },
+          {
+            "name": "end",
+            "in": "query",
+            "description": "year, until when we want to calculate revenue ",
+            "required": true,
+            "default": "1999",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "it's ok",
+            "schema": {
+              "type": "number"
+            }
+          },
+          "404": {
+            "description": "record not found for such year"
+          }
+        }
+      }
+    },
+    "/supplier/{supplier_id}/revenue": {
+      "get": {
+        "tags": [
+          "revenueBySupplier"
+        ],
+        "summary": "get revenue produced by the supplier  ",
+        "operationId": "getRevenueBySupplier",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "supplier_id",
+            "in": "path",
+            "description": "id of the supplier that we want to calculate revenue ",
+            "required": true,
+            "default": 1,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "it's ok",
+            "schema": {
+              "type": "number",
+              "$ref": "#/definitions/RevenueBySupplier"
+            }
+          },
+          "404": {
+            "description": "supplier_id not found"
+          }
+        }
+      }
+    },
+    "/territories": {
+      "post": {
+        "tags": [
+          "territory"
+        ],
+        "summary": " create a new territory  ",
+        "operationId": "postTerritory",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "the territory to create",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Territory"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "it's ok"
+          },
+          "404": {
+            "description": "region_id not found"
+          }
+        }
+      }
+    },
+    "/regions": {
+      "post": {
+        "tags": [
+          "Regions"
+        ],
+        "summary": " create a new region ",
+        "operationId": "postRegion",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "region_description",
+            "in": "body",
+            "description": "name of the new region",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Region"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "it's ok"
           }
         }
       }
@@ -137,20 +337,17 @@
           "format": "int64"
         },
         "category_name": {
-          "type": "string",
-          "default": "Beverages",
-          "description": "all the beverages item"
+          "type": "string"
         },
         "description": {
           "type": "string"
         },
         "picture": {
-          "type": "array",
-          "description": "picture of category"
+          "type": "string"
         }
       }
     },
-    "EmployeeInfo": {
+    "Employee": {
       "type": "object",
       "required": [
         "employee_id",
@@ -202,7 +399,7 @@
           "type": "string"
         },
         "photo": {
-          "type": "array"
+          "type": "string"
         },
         "reports_to": {
           "type": "string"
@@ -212,38 +409,107 @@
         }
       }
     },
-
-      "OrdersByEmployee": {
-        "type": "object",
-        "required": [
-          "employee_id"
-
-        ],
-        "properties": {
-          "employee_id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "last_name": {
-            "type": "string"
-
-          },
-          "first_name": {
-            "type": "string"
-          },
-          "contact_name": {
-            "type": "string"
-
-          },
-           "company_name": {
-            "type": "string"
-
-          },
-          "ship_region": {
-            "type": "string"
-          }
+    "OrdersByEmployee": {
+      "type": "object",
+      "required": [
+        "employee_id"
+      ],
+      "properties": {
+        "employee_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "last_name": {
+          "type": "string"
+        },
+        "first_name": {
+          "type": "string"
+        },
+        "contact_name": {
+          "type": "string"
+        },
+        "company_name": {
+          "type": "string"
+        },
+        "ship_region": {
+          "type": "string"
+        }
+      }
+    },
+    "OrdersByCountry": {
+      "type": "object",
+      "required": [
+        "country"
+      ],
+      "properties": {
+        "country": {
+          "type": "string"
+        },
+        "ship_city": {
+          "type": "string"
+        },
+        "contact_name": {
+          "type": "string"
+        },
+        "company_name": {
+          "type": "string"
+        }
+      }
+    },
+    "RevenueBySupplier": {
+      "type": "object",
+      "required": [
+        "supplier_id"
+      ],
+      "properties": {
+        "total revenue": {
+          "type": "number"
+        }
+      }
+    },
+    "RevenuesByYear": {
+      "type": "object",
+      "required": [
+        "start_date",
+        "end_date"
+      ],
+      "properties": {
+        "total revenue": {
+          "type": "number"
+        }
+      }
+    },
+    "Territory": {
+      "type": "object",
+      "required": [
+        "territory_description",
+        "region_id"
+      ],
+      "properties": {
+        "territory_id": {
+          "type": "string",
+          "format": "uuid"
+        },
+        "territory_description": {
+          "type": "string"
+        },
+        "region_id": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "Region": {
+      "type": "object",
+      "required": [
+        "region_description"
+      ],
+      "properties": {
+        "region_description": {
+          "type": "string"
         }
       }
     }
   }
+}
 
